react code chnages

--- a/batch4-instagram/src/App.css
+++ b/batch4-instagram/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+
+
+/* day1.html
+App.jsx. ----- js file with includess html5 code css code as well js code 
+day1.css
+
+day10.html
+
+day10.css */
